--- a/web/css/certificate.css
+++ b/web/css/certificate.css
@@ -19,6 +19,12 @@ h1
     font-size: 50px;
     color: darkgreen;
 }
+h2
+{
+    text-align: center;
+    font-size: 30px;
+    color: darkgreen;
+}
 .secondaryText
 {
     text-align: center;
