--- a/web/css/certificate.css
+++ b/web/css/certificate.css
@@ -2,26 +2,24 @@
 body
 {
     font-family: "Roboto Condensed", sans-serif;
-}
-.darkmiraImage {
-    display: block;
-    height:300px;
-    width:900px;
-    background-color: lightgrey;
-    background-image: url("../media/index-certificate.png");
+    background-color:black;
+    background-image: url("../media/imgpsh_fullsize3.png");
     background-repeat: no-repeat;
-    margin:0 auto;
+    color:white;
+    width: 842px;
 }
 .mainWrapper
 {
-    height:100px;
-    width:900px;
+    width:700px;
+    height:200px;
     margin: 0 auto;
+    margin-top: 150px;
 }
 h1
 {
+    margin: 20px 0px 20px 0px;
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
 }
 h2
 {
@@ -31,37 +29,44 @@ h2
 }
 .secondaryText
 {
+    line-height: 38px;
     text-align: center;
-    font-size: 30px;
+    font-size: 23px;
 }
 .tertiaryText
 {
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
+    margin: 20px 0px 0px 0px;
 }
 .smallTitle
 {
-    color: #289948;
+    color: #FCCD05;
     font-weight: bold;
 }
 .signatureWrap
 {
-    heigth: 700px;
+    heigth: 310px;
 
-    //background-color:red;
+    background-color:red;
     margin-bottom: 70px;
 }
 .signatureBlock
 {
-    margin: 0px 80px 0px 80px;
-    width:30%;
-    height: 150px;
+    margin: 0px 67px 0px 67px;
+    width: 210px;
+    height: 160px;
     display: inline-block;
     vertical-align: top;
     background-color:pink;;
 }
+.imageWrap
+{
+    background-color:orange;
+    height:100px;
+}
 .signatureNames
 {
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
 }
